--- a/ENKKI/sequence_budget_formation_q4_2025/step_1_initial_outreach/template_variant_b.html
+++ b/ENKKI/sequence_budget_formation_q4_2025/step_1_initial_outreach/template_variant_b.html
@@ -7,7 +7,7 @@
                     <!-- Header avec logo -->
                     <tr>
                         <td style="background: linear-gradient(135deg, #003B69 0%, #001f3d 100%); padding: 24px 40px; text-align: center;">
-                            <img src="https://d1muf25xaso8hp.cloudfront.net/https%3A%2F%2F11d96a0e7e946a6d02eea1b59ed8995d.cdn.bubble.io%2Ff1738937103143x452387340290872700%2FSans%2520titre-1%2520%25281%2529.png?w=64&h=64&auto=compress&dpr=1&fit=max" alt="Enkki Formation Logo" width="48" height="48" style="display: block; margin: 0 auto;">
+                            <img src="https://enkki-formation.fr/app/uploads/2024/01/logo-color-enkki.png" alt="Enkki Formation Logo" width="180" height="48" style="display: block; margin: 0 auto;">
                         </td>
                     </tr>
                     
