--- a/ENKKI/sequence_competences_pratiques_tpe_pme/step_2_benefices_mesurables/template.html
+++ b/ENKKI/sequence_competences_pratiques_tpe_pme/step_2_benefices_mesurables/template.html
@@ -1,21 +1,21 @@
 <body style="margin: 0; padding: 0; font-family: Arial, sans-serif; background-color: #fafafa; color: #374151; line-height: 1.6;">
     <table width="100%" cellpadding="0" cellspacing="0" border="0" style="background-color: #fafafa; padding: 20px 0;">
         <tr>
-            <td align="center">
-                <table width="600" cellpadding="0" cellspacing="0" border="0" style="background-color: #ffffff; border-radius: 12px; overflow: hidden; max-width: 100%;">
+            <td align="center" style="padding: 0 10px;">
+                <table width="600" cellpadding="0" cellspacing="0" border="0" style="width: 100%; background-color: #ffffff; border-radius: 12px; overflow: hidden; max-">
                     <tr>
-                        <td style="background: linear-gradient(135deg, #003B69 0%, #001f3d 100%); padding: 24px 40px; text-align: center;">
-                            <img src="https://enkki-formation.fr/app/uploads/2024/01/logo-color-enkki.png" alt="Enkki Formation Logo" width="180" height="48" style="display: block; margin: 0 auto;">
+                        <td style="background: linear-gradient(135deg, #003B69 0%, #001f3d 100%); padding: 24px 20px; text-align: center;">
+                            <img src="https://enkki-formation.fr/app/uploads/2024/01/logo-color-enkki.png" alt="Enkki Formation Logo" width="180" height="48" style="max-width: 100%; height: auto; display: block; margin: 0 auto">
                         </td>
                     </tr>
                     <tr>
-                        <td style="background: linear-gradient(135deg, #f0f4f8 0%, #e1e8ed 100%); padding: 32px 40px; text-align: center; border-bottom: 1px solid #E5E7EB;">
+                        <td style="background: linear-gradient(135deg, #f0f4f8 0%, #e1e8ed 100%); padding: 30px 20px; text-align: center; border-bottom: 1px solid #E5E7EB;">
                             <span style="display: inline-block; background-color: #10B981; color: #ffffff; padding: 6px 16px; border-radius: 20px; font-size: 11px; font-weight: 700; text-transform: uppercase; letter-spacing: 0.5px; margin-bottom: 16px;">💰 ROI</span>
                             <h1 style="font-size: 24px; font-weight: 700; color: #003B69; margin: 0; line-height: 1.3;">ROI formation : calcul simple</h1>
                         </td>
                     </tr>
                     <tr>
-                        <td style="padding: 40px;">
+                        <td style="padding: 30px 20px">
                             <table cellpadding="0" cellspacing="0" border="0" width="100%">
                                 <tr>
                                     <td>
@@ -61,7 +61,7 @@
                                 <!-- Image -->
                                 <tr>
                                     <td align="center" style="padding: 20px 0 28px 0;">
-                                        <img src="https://images.pexels.com/photos/3184423/pexels-photo-3184423.jpeg?auto=compress&cs=tinysrgb&w=600" alt="ROI formation" width="520" style="max-width: 100%; height: auto; border-radius: 10px; display: block;">
+                                        <img src="https://images.pexels.com/photos/3184423/pexels-photo-3184423.jpeg?auto=compress&cs=tinysrgb&w=600" alt="ROI formation" width="520" style="max-width: 100%; height: auto; border-radius: 10px; display: block">
                                     </td>
                                 </tr>
                                 
@@ -75,7 +75,7 @@
                                 </tr>
                                 
                                 <tr>
-                                    <td align="center">
+                                    <td align="center" style="padding: 0 10px;">
                                         <p style="font-size: 16px; color: #111827; margin: 0 0 20px 0;">Simple, non ?</p>
                                         <a href="https://91bf-vivien.systeme.io/enkki-68b976fd?utm_source=email&utm_medium=apolo&utm_campaign=evergreen&utm_content=ROI" style="display: inline-block; background: linear-gradient(135deg, #FFA500 0%, #ff8c00 100%); color: #ffffff; text-decoration: none; padding: 16px 40px; border-radius: 10px; font-weight: 700; font-size: 16px;">📅 Consulter le calendrier</a>
                                     </td>
@@ -92,7 +92,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td style="background-color: #F9FAFB; padding: 20px 40px; text-align: center; border-top: 1px solid #E5E7EB;">
+                        <td style="background-color: #F9FAFB; padding: 20px; text-align: center; border-top: 1px solid #E5E7EB;">
                             <p style="font-size: 11px; color: #6B7280; margin: 0;">© 2025 Enkki Formation · Tous droits réservés</p>
                         </td>
                     </tr>
