--- a/ENKKI/sequence_competences_pratiques_tpe_pme/step_4_invitation_telechargement/template.html
+++ b/ENKKI/sequence_competences_pratiques_tpe_pme/step_4_invitation_telechargement/template.html
@@ -1,21 +1,21 @@
 <body style="margin: 0; padding: 0; font-family: Arial, sans-serif; background-color: #fafafa; color: #374151; line-height: 1.6;">
     <table width="100%" cellpadding="0" cellspacing="0" border="0" style="background-color: #fafafa; padding: 20px 0;">
         <tr>
-            <td align="center">
-                <table width="600" cellpadding="0" cellspacing="0" border="0" style="background-color: #ffffff; border-radius: 12px; overflow: hidden; max-width: 100%;">
+            <td align="center" style="padding: 0 10px;">
+                <table width="600" cellpadding="0" cellspacing="0" border="0" style="width: 100%; background-color: #ffffff; border-radius: 12px; overflow: hidden; max-">
                     <tr>
-                        <td style="background: linear-gradient(135deg, #003B69 0%, #001f3d 100%); padding: 24px 40px; text-align: center;">
-                            <img src="https://enkki-formation.fr/app/uploads/2024/01/logo-color-enkki.png" alt="Enkki Formation Logo" width="180" height="48" style="display: block; margin: 0 auto;">
+                        <td style="background: linear-gradient(135deg, #003B69 0%, #001f3d 100%); padding: 24px 20px; text-align: center;">
+                            <img src="https://enkki-formation.fr/app/uploads/2024/01/logo-color-enkki.png" alt="Enkki Formation Logo" width="180" height="48" style="max-width: 100%; height: auto; display: block; margin: 0 auto">
                         </td>
                     </tr>
                     <tr>
-                        <td style="background: linear-gradient(135deg, #10B981 0%, #059669 100%); padding: 32px 40px; text-align: center; border-bottom: 1px solid #E5E7EB;">
+                        <td style="background: linear-gradient(135deg, #10B981 0%, #059669 100%); padding: 30px 20px; text-align: center; border-bottom: 1px solid #E5E7EB;">
                             <span style="display: inline-block; background-color: #ffffff; color: #10B981; padding: 6px 16px; border-radius: 20px; font-size: 11px; font-weight: 700; text-transform: uppercase; letter-spacing: 0.5px; margin-bottom: 16px;">🎁 Gratuit</span>
                             <h1 style="font-size: 22px; font-weight: 700; color: #ffffff; margin: 0; line-height: 1.3;">15 min pour clarifier vos besoins formation ?</h1>
                         </td>
                     </tr>
                     <tr>
-                        <td style="padding: 40px;">
+                        <td style="padding: 30px 20px">
                             <table cellpadding="0" cellspacing="0" border="0" width="100%">
                                 <tr>
                                     <td>
@@ -64,7 +64,7 @@
                                 <!-- Image -->
                                 <tr>
                                     <td align="center" style="padding: 20px 0 28px 0;">
-                                        <img src="https://images.pexels.com/photos/167699/pexels-photo-167699.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Vosges" width="520" style="max-width: 100%; height: auto; border-radius: 10px; display: block;">
+                                        <img src="https://images.pexels.com/photos/167699/pexels-photo-167699.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Vosges" width="520" style="max-width: 100%; height: auto; border-radius: 10px; display: block">
                                     </td>
                                 </tr>
                                 
@@ -103,7 +103,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td style="background-color: #F9FAFB; padding: 20px 40px; text-align: center; border-top: 1px solid #E5E7EB;">
+                        <td style="background-color: #F9FAFB; padding: 20px; text-align: center; border-top: 1px solid #E5E7EB;">
                             <p style="font-size: 11px; color: #6B7280; margin: 0;">© 2025 Enkki Formation · Tous droits réservés</p>
                         </td>
                     </tr>
